[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://Assets/light.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/MatchupPro.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/GunSFX.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Death.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Ouch.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="Animation" id=2]
resource_name = "gun"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 112, 88, 50, 43 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "gun2"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 88, 55, 43 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "gun3"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 110, 176, 50, 43 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hands"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 352, 176, 37, 43 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "no_gun"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 390, 176, 34, 43 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 24.0

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 160, 544 )
script = ExtResource( 3 )
pixel_cam_path = NodePath("../Camera2D")

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 8, 0 )
region_enabled = true
region_rect = Rect2( 112, 88, 50, 43 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 3.0
mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "gun"
anims/gun = SubResource( 2 )
anims/gun2 = SubResource( 3 )
anims/gun3 = SubResource( 4 )
anims/hands = SubResource( 5 )
anims/no_gun = SubResource( 6 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 24, 9.5 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShakeTween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -56.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 8 )
text = "Press E to Upgrade"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sounds"

[node name="Ouch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Sounds"

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sounds"

[connection signal="tween_all_completed" from="ShakeTween" to="." method="_on_ShakeTween_tween_all_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
